@@ -1,7 +1,9 @@
-@prefix dc:      <http://purl.org/dc/elements/1.1/> .
-@prefix :        <file:///home/mar/OntologyViews/subQueries/fixDatasets/ARQ-2.1/> .
-@prefix xsd:     <http://www.w3.org/2001/XMLSchema#> .
+@prefix : <http://example/> .
+@prefix rdf:        <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
+@prefix rdfs:	    <http://www.w3.org/2000/01/rdf-schema#> .
+@prefix owl:        <http://www.w3.org/2002/07/owl#> .
+@prefix log:        <http://www.w3.org/2000/10/swap/log#> .
+@prefix xsd:        <http://www.w3.org/2001/XMLSchema#> .
+@prefix skos:       <http://www.w3.org/2004/02/skos/core#> .
 
-[]    dc:title      "Harry Potter and the Chamber of Secrets" .
-
-[]    dc:title      "Harry Potter and the Philospher's Stone" . 
+:x rdfs:subClassOf owl:Thing .
